--- a/roboshop.conf
+++ b/roboshop.conf
@@ -4,9 +4,9 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://catalogue.website.ramkrishna.website:8080/; }
-location /api/user/ { proxy_pass http://user.website.ramkrishna.website:8080/; }
-location /api/cart/ { proxy_pass http://cart.website.ramkrishna.website:8080/; }
+location /api/catalogue/ { proxy_pass http://catalogue.website.ramakrishna.website:8080/; }
+location /api/user/ { proxy_pass http://user.website.ramakrishna.website:8080/; }
+location /api/cart/ { proxy_pass http://cart.website.ramakrishna.website:8080/; }
 location /api/shipping/ { proxy_pass http://localhost:8080/; }
 location /api/payment/ { proxy_pass http://localhost:8080/; }
 
